2011-11-20    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (add_name_, add_school_, add_level_): changed parameter to const*
	(add_school_): changed insert to spell to set_school
	(add_name_): changed insert to spell to set_name

	* src/spell.cpp (add_element): simplified if check for TARGET

2011-10-21    <h.v.raven@googlemail.com>

	* src/gtkwindow.cpp (display_spell): changed to use RefPtr

	* src/xml.h (Spell_RefPtr): New class for save pointer acces on spells

	* src/xmlspelllist.cpp (get_checked_spell_pointer_, get_checked_spell_ref_): new functions

2011-10-17    <h.v.raven@googlemail.com>

	* src/xml.h: new typedef for spell_iterator

	* src/xmlspelllist.cpp (fill_list_, get_spell_list, get_spell, read_spell_) changed to use iterators instead of pointers

2011-10-14    <h.v.raven@googlemail.com>

	* src/xmlspelllist.cpp (Spell_List): changed to use spell_list and spell_name_map

	* src/xmldecoder.cpp (get_names_): new function to get all spell names

2011-10-11    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (add_school_): new decoding function for schools

	* src/school.cpp (School, remove_subschool): changed arguments to reference
	(print): added descriptor to output
	(print_descriptor): new function

	* src/spell.h (Spell_Element): added descriptor

	* src/xmldecoder.cpp (add_elements_): new main function for xmldecoder
	(add_name_): new decoding function for names
	(add_name_): fixed endless loop...

	* src/xmlspelllist.cpp (~Spell_List): added delete for cached spells
	(get_spell): new function for returning spell
	(read_spell_): new function to call the xml decoder

	* src/spell.cpp (add_element): save fix elements in variables and create pointer entry for special entrys
	(~Spell): changed to not delete fix elements

	* src/xmlspelllist.cpp (get_spell_list): changed map type and get name direct from spell_list_ (instead from xml)

2011-10-10    <h.v.raven@googlemail.com>

	* src/spell.cpp (add_element): new function for adding elements
